# MAPS-BE

./: .env.example  .gitignore  Cargo.toml  build.rs  fix_migration_checksums.sql
.github/: SECRETS.md
.github/workflows/: README.md  backend.yml
deploy/: DEPLOY.md  MONITORING.md  NGINX-FIX.md  README.md  check-health.sh  maps-backend.service
migrations/: 001_init.sql  002_fuel_records.sql  003_fuel_liters.sql  004_trips.sql  005_fuel_trip_backfill.sql  006_waypoints.sql  007_gas_stations.sql  008_gas_stations_multi_source.sql  009_gas_stations_updated_at.sql  010_reels.sql  011_posts.sql  012_post_comments.sql  013_add_user_roles.sql  014_location_speed_heading.sql  015_rust_practice_topics.sql  README.md
nginx/: mapsapi-ssl.conf.snippet  mapsapi.mostdata.site.conf
src/: config.rs  db.rs  error.rs  main.rs  media.rs  migrate.rs  routes.rs  ws.rs
src/handlers/: admin.rs  auth.rs  fuel.rs  gas_stations.rs  geocode.rs  location.rs  mod.rs  posts.rs  reels.rs  rooms.rs  rust_practice.rs  trips.rs  waypoints.rs
src/jobs/: gas_station_sync.rs  mod.rs
src/middleware/: auth.rs
src/models/: fuel_record.rs  gas_station.rs  location.rs  mod.rs  post.rs  post_comment.rs  reel.rs  room.rs  room_member.rs  rust_practice_topic.rs  trip.rs  user.rs  waypoint.rs
src/services/: auth.rs
