[package]
name = "maps-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fix_migration_checksums"
path = "src/bin/fix_migration_checksums.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Auth - JWT validation only (register/login in auth-service)
jsonwebtoken = "9.2"
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WebSocket
futures-util = "0.3"

# HTTP client (Overpass API)
reqwest = { version = "0.11", features = ["json"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
